# mlsauce

./: .gitignore  .travis.yml  CHANGES.md  CONTRIBUTING.md  CONTRIBUTING.rst  Dockerfile  HISTORY.rst  MANIFEST.in  Makefile  README.html  README.md  README.rst  pyproject.toml  requirements.txt  requirements_dev.txt  setup.cfg  setup.py  test_fpca_integration.py  tox.ini
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci-cd.yml  python-publish.yml
R-package/: .Rbuildignore  .Rhistory  .Rprofile  DESCRIPTION  NAMESPACE  mlsauce.Rproj
R-package.Rcheck/: mlsauce-Ex.R  mlsauce-Ex.Rout  mlsauce-Ex.timings
R-package.Rcheck/mlsauce/: DESCRIPTION  INDEX  NAMESPACE
R-package/R/: adaopt.R  lasso.R  lsboost.R  ridge.R  utils.R  zzz.R
R-package/man/: AdaOpt.Rd  LSBoostClassifier.Rd  LSBoostRegressor.Rd  LassoRegressor.Rd  Ridge.Rd  RidgeRegressor.Rd  StumpClassifier.Rd
adaopt/: __init__.py
docs/: Makefile  autogen.py  conf.py  index.rst  installation.rst  make.bat  mkdocs.yml  mlsauce.utils.misc.rst  requirements.txt  usage.rst
examples/: adaopt_classifier.py  confobayesian.py  correncoder.py  download_dataset.py  fpca_example.py  genboost_classifier.py  genboost_classifier_krr.py  genboost_classifier_ridge.py  genboost_classifier_update.py  genboost_regressor.py  genboost_regressor2.py  generation_classification.py  healthcare.py  hist_genboost_classifier.py  hist_genboost_regressor.py  isotonic_regressor_example.py  lasso_regressor.py  lazy_booster_classification.py  lazy_booster_regression.py  lazy_histbooster_classification.py  lazy_histbooster_regression.py  lazy_mts.py  lsboost_classifier.py  lsboost_regressor.py  lsboost_regressor_pi.py  lstm.py  multitask_regressor.py  penalizedcv.py  plot_ridge_lasso_coeffs.py  ridge_regressor.py  rvfljackknifeplus.py  shapley_example.py  stump_classifier.py  thetawithcontext.py
mlsauce/: __init__.py  _config.py  setup.py
mlsauce-docs/: index.html  mlsauce.html  search.js
mlsauce.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: __init__.py  test_adaopt.py
(+220 files in other folders)
